--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,21 @@
     <artifactId>hadoop-arch</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <hadoopVersion>2.7.2</hadoopVersion>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>${hadoopVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>${hadoopVersion}</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
