--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,21 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <!--MapReduce UT-->
+        <dependency>
+            <groupId>org.apache.mrunit</groupId>
+            <artifactId>mrunit</artifactId>
+            <version>1.1.0</version>
+            <classifier>hadoop2</classifier>
+            <scope>test</scope>
+        </dependency>
+        <!--Test in mini cluster in single JVM-->
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-minicluster</artifactId>
+            <version>${hadoop.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>hadoop-arch</finalName>
