--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,13 @@
         </dependency>
         <dependency>
             <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>${avro.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.avro</groupId>
             <artifactId>avro-mapred</artifactId>
+            <classifier>hadoop2</classifier>
             <version>${avro.version}</version>
         </dependency>
     </dependencies>
