Add avro tools dependency and parquet dependency to pom

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <hadoop.version>2.7.2</hadoop.version>
         <avro.version>1.8.1</avro.version>
+        <parquet.version>1.8.1</parquet.version>
     </properties>
     <dependencies>
         <!--<dependency>-->
@@ -59,6 +60,26 @@
             <artifactId>avro-mapred</artifactId>
             <classifier>hadoop2</classifier>
             <version>${avro.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro-tools</artifactId>
+            <version>${avro.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.parquet</groupId>
+            <artifactId>parquet-column</artifactId>
+            <version>${parquet.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.parquet</groupId>
+            <artifactId>parquet-hadoop</artifactId>
+            <version>${parquet.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.parquet</groupId>
+            <artifactId>parquet-avro</artifactId>
+            <version>${parquet.version}</version>
         </dependency>
     </dependencies>
     <build>
