Add flume local to hdfs properties file

--- a/src/main/resources/flume/spool-to-logger.properties
+++ b/src/main/resources/flume/spool-to-logger.properties
@@ -15,3 +15,5 @@ agent1.sinks.sink1.type=logger
 
 # The channel is a file channel, which means that events in the channel are persisted to disk for durability
 agent1.channels.channel1.type=file
+
+# every event will reach the sink at least once—that is, duplicates are possible.
