Add flume tier flow test flow

--- a/src/main/resources/flume/spool-to-hdfs-logger.properties
+++ b/src/main/resources/flume/spool-to-hdfs-logger.properties
@@ -1,10 +1,16 @@
 # Flume configuration using a spooling directory source, fanning out to an HDFS sink and a logger sink
+
+# Flume uses a separate transaction to deliver each batch of events from the spooling directory source to each channel
+# If either of these transactions fails (if a channel is full, for example), then the events will not be removed from the source, and will be retried later.
+
 agent1.sources = source1
 agent1.sinks = sink1a sink1b
 agent1.channels = channel1a channel1b
 
 agent1.sources.source1.channels = channel1a channel1b
 agent1.sources.source1.selector.type = replicating
+
+# optional channel, so that if the transaction associated with it fails, this will not cause events to be left in the source and tried again later
 agent1.sources.source1.selector.optional = channel1b
 agent1.sinks.sink1a.channel = channel1a
 agent1.sinks.sink1b.channel = channel1b
