Add more notes about tiered flume flow

--- a/src/main/resources/flume/spool-to-hdfs-tiered.properties
+++ b/src/main/resources/flume/spool-to-hdfs-tiered.properties
@@ -5,6 +5,7 @@
 # Avro RPC to communicate (hence the name). If you need to write events to Avro files, use the HDFS sink
 
 
+# the Avro sink-source pair guarantees that an event is delivered from one Flume agent’s channel to another Flume agent’s channel (at least once).
 
 
 
@@ -29,6 +30,9 @@ agent1.sinks.sink1.hostname = localhost
 agent1.sinks.sink1.port = 10000
 
 agent1.channels.channel1.type = file
+# channels necessarily have a limited capacity
+# if agent1’s channel fills up while agent2 is not running, then any new events will be lost
+# By default, a file channel will not recover more than one million events
 agent1.channels.channel1.checkpointDir=/tmp/agent1/file-channel/checkpoint
 agent1.channels.channel1.dataDirs=/tmp/agent1/file-channel/data
 
