--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <avro.version>1.8.1</avro.version>
         <parquet.version>1.8.1</parquet.version>
         <hbase.version>1.2.2</hbase.version>
+        <zookeeper.version>3.4.8</zookeeper.version>
     </properties>
     <dependencies>
         <!--<dependency>-->
@@ -91,6 +92,11 @@
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-server</artifactId>
             <version>${hbase.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>${zookeeper.version}</version>
         </dependency>
     </dependencies>
     <build>
