--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>hadoop-client</artifactId>
             <version>${hadoop.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>3.2.0</version>
+        </dependency>
 
         <!-- Unit test artificats -->
         <dependency>
