Add more notes about zoo.cfg

--- a/etc/zookeeper/zoo.cfg
+++ b/etc/zookeeper/zoo.cfg
@@ -2,14 +2,21 @@
 tickTime=2000
 # The number of ticks that the initial
 # synchronization phase can take
-initLimit=10
+
+# initLimit is the amount of time to allow for followers to connect to and sync with the leader.
+initLimit=5
 # The number of ticks that can pass between
 # sending a request and getting an acknowledgement
-syncLimit=5
+
+# syncLimit is the amount of time to allow a follower to sync with the leader.
+# If a follower fails to sync within this period, it will restart itself
+syncLimit=2
 # the directory where the snapshot is stored.
 # do not use /tmp for storage, /tmp here is just
 # example sakes.
 dataDir=/Users/Zhenglai/Data/zookeeper
+# should be put in another disk
+dataLogDir=/Users/Zhenglai/Data/zookeeper_log
 # the port at which the clients will connect
 clientPort=2181
 # the maximum number of client connections.
@@ -27,3 +34,10 @@ maxClientCnxns=10
 # Purge task interval in hours
 # Set to "0" to disable auto purge feature
 #autopurge.purgeInterval=1
+
+
+# Servers listen on three ports: 2181 for client connections; 2888 for follower connections, if they are the leader; and 3888 for other server connections during the leader election phase.
+# When a ZooKeeper server starts up, it reads the myid file to determine which server it is
+# server.1=zookeeper1:2888:3888
+# server.2=zookeeper2:2888:3888
+# server.3=zookeeper3:2888:3888
