Add notes about how to configure ZOOCFGDIR for ZK mac brew install

--- a/etc/zookeeper/zoo.cfg
+++ b/etc/zookeeper/zoo.cfg
@@ -1,3 +1,5 @@
+# We need update /usr/local/etc/zookeeper/defaults as below:
+# export ZOOCFGDIR=/Users/Zhenglai/.zookeeper.conf
 # The number of milliseconds of each tick
 tickTime=2000
 # The number of ticks that the initial
