Bug fix to include java src as compilation path

--- a/pom.xml
+++ b/pom.xml
@@ -182,8 +182,8 @@
     </dependencies>
     <build>
         <finalName>hadoop-arch</finalName>
-        <sourceDirectory>src/main/scala</sourceDirectory>
-        <testSourceDirectory>src/test/scala</testSourceDirectory>
+        <!--<sourceDirectory>src/main/scala</sourceDirectory>-->
+        <!--<testSourceDirectory>src/test/scala</testSourceDirectory>-->
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
