Add maven kafka dependency

--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,13 @@
             <version>${hbase.version}</version>
         </dependency>
 
+        <!--Kafka-->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.11</artifactId>
+            <version>0.10.0.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>hadoop-arch</finalName>
