Update zoo.cfg to include local vm setup

--- a/etc/zookeeper/zoo.cfg
+++ b/etc/zookeeper/zoo.cfg
@@ -48,6 +48,6 @@ maxClientCnxns=10
 # The second port, 3888, is used for leader election, in case a new leader arises in the quorum. As all communication happens over TCP, a second port is required to respond to leader election inside the quorum.
 # Servers listen on three ports: 2181 for client connections; 2888 for follower connections, if they are the leader; and 3888 for other server connections during the leader election phase.
 # When a ZooKeeper server starts up, it reads the myid file to determine which server it is
-# server.1=zookeeper1:2888:3888
-# server.2=zookeeper2:2888:3888
-# server.3=zookeeper3:2888:3888
+server.1=vm01:2888:3888
+server.2=vm02:2888:3888
+server.3=vm03:2888:3888
